gcp/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  ingressClassName: traefik
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.multicloud-devops-ninja.pt`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
